syntax = "proto3";
package kanthor.controlplane.v1;
option go_package = "github.com/scrapnode/kanthor/controlplane/server/grpc/protos";

import "entities.proto";

service Application {
  rpc List(ApplicationListReq) returns (ApplicationListRes) {}
  rpc Get(ApplicationGetReq) returns (ApplicationEntity) {}
}

message ApplicationListReq {
  string cursor = 1;
  string search = 2;
  int32 limit = 3;
  repeated string ids = 4;
}

message ApplicationListRes {
  string cursor = 1;
  repeated ApplicationEntity data = 2;
}

message ApplicationGetReq {
  string id = 1;
}